--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
    
 <h1>Pontos Turisticos</h1><br>
 
-<div class="carrossel" >
-  <div class="carrosel_iner">
-      <img src="./images/copacabana.jpg" alt="copacabana">
-      <img src="./images/chile.jpg" alt="">
-      <img src="./images/teste.png" alt="">
-  </div>
-</div>
+<h3>Rio De Janeiro</h3>
+<img src="./images/copacabana.jpg" alt="Rio de janeiro"> <br><br>
+
 
 <label class="label_name" for="name">Nome:</label><br>
 <input type="text" placeholder="Digite seu Nome:" id="name"><br><br> 
@@ -30,8 +26,14 @@
 <h3>questionario</h3>
 
 <h4>Você ja Andou de Avião</h4>
-<input type="radio" id="sim" name="questionario"><label for="sim">Sim</label><br>
-<input type="radio" id="nao" name="quaetionario"><label for="nao">Não</label><br><br>
+
+<label for="sim">Sim</label>
+<input type="radio" id="sim" name="questionario" value="sim"><br>
+
+<label for="nao">Não</label>
+<input type="radio" id="nao" name="quaetionario" value="nao"><br><br>
+
+
 
 
 
