--- a/index.html
+++ b/index.html
@@ -1,43 +1,180 @@
 <!DOCTYPE html>
-<html lang="pr-br">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Pontos Turisticos</title>
-    <link rel="stylesheet" href="style.css"/>
-  </head>
-  <body>
-   
-<h1>Pontos Turisticos</h1><br>
+<html lang="pt-BR">
 
-<h3>Rio De Janeiro</h3>
-<img src="./images/copacabana.jpg" alt="Rio de janeiro"> <br><br>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pontos Turísticos</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
 
+<body>
+  <center>
+    <h1>
 
-<label class="label_name" for="name">Nome:</label><br>
-<input type="text" placeholder="Digite seu Nome:" id="name"><br><br> 
-
-<label class="label_email" for="email">Email:</label><br>
-<input type="email" placeholder="Digite seu Email" id="email"><br><br>
-
-<label class="label_senha" for="password">Senha:</label><br>
-<input type="password" placeholder="Digite sua Senha" id="senha"><br><br>
+      <div class="titulo"> <span class="primeira_parte">Pontos Turísticos </span>
+        <span class="segunda_parte">do Brasil</span>
+    </h1><br>
+    </div>
 
 
-<h3>questionario</h3>
+    <h3>Rio de Janeiro</h3>
+    <div class="card">
+      <!-- SVG Placeholder -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <path d=""></path>
+      </svg>
 
-<h4>Você ja Andou de Avião</h4>
+      <!-- Imagem -->
+      <div class="imagem">
+        <img src="images/rio.jpg" alt="Imagem de Copacabana">
+      </div>
 
-<label for="sim">Sim</label>
-<input type="radio" id="sim" name="questionario" value="sim"><br>
+      <!-- Card Content -->
+      <div class="card__content">
+        <p class="card__title">Rio de Janeiro</p>
+        <p class="card__description">
+          RJ permanece em destaque mundial na área de entretenimento
+          As raízes da atividade cultural do Rio de Janeiro remontam à época da chegada da família real portuguesa, que
+          estimulou o desenvolvimento das artes, criando o Museu Nacional, a Biblioteca Real, a Escola Real de Artes e o
+          Observatório Astronômico. Na capital também se desenvolveram movimentos religiosos e culturais com os escravos
+          que aqui desembarcaram e foi criada a bossa nova, gênero musical cujo sucesso internacional contribuiu para
+          promover o país no exterior
+          O RJ permanece em destaque mundial na área de entretenimento, com 68 espaços culturais e 53 museus só na
+          capital – como o Theatro Municipal, a Biblioteca Nacional, o Centro Cultural Banco do Brasil, o Palácio do
+          Catete, a Cidade das Artes e os museus Arte Moderna, do Amanhã e de Artes do Rio. A cidade também é referência
+          na realização de grandes eventos de repercussão internacional, como o Carnaval, Rock in Rio, a Bienal do
+          Livro, a ArtRio, o Anima Mundi e múltiplos festivais de cinema. Além disso, a presença de diversas atrações de
+          importância histórica em meio a belezas naturais rendeu à capital do Rio os títulos da Unesco de patrimônio
+          cultural mundial na categoria paisagem urbana e capital mundial da arquitetura em 2020.</p>
+        <p class="card__description">
+          Mas não é só na cidade do Rio que se encontram os pontos culturais do RJ. Alguns dos principais atrativos do
+          estado são o Museu de Arte Contemporânea, em Niterói; a Catedral de São Pedro Alcântara, a Casa de Santos
+          Dumont e o Palácio de Cristal, em Petrópolis; o Quilombo São José da Serra, formado por povos afrodescendentes
+          em Valença, com grupos de Jongo e tradições católicas e umbandistas; e a Festa Literária Internacional de
+          Paraty (FLIP).
+          Por falar em FLIP, os festivais agitam o fluxo das cidades do RJ, com atrações únicas e curadorias especiais.
+          Festivais como Mimo, Bourbon, Mostra Maré de Música e Festival Queremos já entraram para a rota dos melhores
+          do país. Agora, se você estiver atrás de um evento que misture tudo isso e mais literatura, cultura e
+          propósito social o WOW – Festival Mulheres do Mundo e a Flup – Festa Literária Internacional das Periferias
+          são, com certeza, eventos que devem entrar no seu radar.
+        </p>
+      </div>
+    </div><br><br>
 
-<label for="nao">Não</label>
-<input type="radio" id="nao" name="quaetionario" value="nao"><br><br>
+    <footer><h3>Foz do Iguaçu</h3></footer>
+    <div class="card">
+      <!-- SVG Placeholder -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <path d=""></path>
+      </svg>
 
+      <!-- Imagem -->
+      <div class="imagem">
+        <img src="images/catarata.jpg" alt="Foz do Iguaçu">
+      </div>
 
+      <!-- Card Content -->
+      <div class="card__content">
+        <p class="card__title">Cataratas do Iguaçu</p>
+        <p class="card__description">
+          Conheça as maravilhas das Cataratas do Iguaçu e encante-se com essa imensidão da natureza!
+          Localizado na fronteira entre o Brasil e a Argentina, as Cataratas do Iguaçu são um espetáculo natural de
+          tirar o fôlego.
+          Com suas 275 quedas d’água majestosas, atingindo até 80 metros de altura no Rio Iguaçu, o local é o lar do
+          Parque Nacional do Iguaçu, uma vasta área de conservação com 185 mil hectares.
+          Assim, este santuário preserva parte significativa da Mata Atlântica, sendo um importante centro de pesquisa
+          científica e educação ambiental.
+          Além disso, o parque oferece uma experiência única de turismo ecológico, permitindo visitas públicas.
+          Portanto, com sua rica biodiversidade e paisagens deslumbrantes, as Cataratas do Iguaçu é uma jornada
+          memorável, onde cultura, história e natureza se fundem em uma experiência inesquecível.</p>
+        <p class="card__description">
+          As Cataratas do Iguaçu são tão impressionantes que, em 1986, a UNESCO decidiu que mereciam ser reconhecidas
+          como Patrimônio Natural da Humanidade.
+          E isso não foi tudo!
+          Em 2011, as Cataratas do Iguaçu conquistaram outro título incrível: foram nomeadas uma das 7 Maravilhas
+          Naturais do Mundo. Isso significa que estão entre os lugares mais incríveis e especiais da Terra!
+          Então, para celebrar esse reconhecimento, foi criado o #CataratasDay, um dia especial dedicado à
+          conscientização sobre a importância de preservar o Parque Nacional do Iguaçu.
+          Afinal, esse lugar não é apenas uma paisagem bonita, mas um santuário de biodiversidade, visto que abriga uma
+          grande variedade de plantas e animais.
+          “A minha primeira visita nas Cataratas foi um negócio que ficou muito marcante porque a gente ouvia falar e,
+          já que eu estava em Foz do Iguaçu, porque eu vinha para Foz do Iguaçu a trabalho, porque não visitar as
+          Cataratas? Então para mim foi muito emocionante, eu achei lindo demais, toda aquela paisagem! … As Cataratas
+          representam tudo o que a gente tem de bom em Foz do Iguaçu!”</p>
+      </div>
+    </div><br><br>
 
+    <h3>Parque do Ibirapuera</h3>
+    <div class="card">
+      <!-- SVG Placeholder -->
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <path d=""></path>
+      </svg>
 
+      <!-- Imagem -->
+      <div class="imagem">
+        <img src="images/parque.jpg" alt="Foz do Iguaçu">
+      </div>
 
-<button type="button">enviar</button> 
+      <!-- Card Content -->
+      <div class="card__content">
+        <p class="card__title">Parque do Ibirapuera</p>
+        <p class="card__description">
+          O Parque do Ibirapuera, uma das principais atrações de São Paulo, abriga dezenas de atividades que você pode
+          curtir todos os dias da semana No meio da selva de pedra, o Parque do Ibirapuera – Ibira para os mais íntimos
+          – reluz como uma grande área verde. Para muitos é o pulmão da capital paulista. Inaugurado em agosto de 1954,
+          durante as comemorações dos 400 anos de São Paulo, o espaço abriga museus, planetário, restaurantes e muita
+          área para prática esportiva. Chega a receber 150.000 visitantes por final de semana, cerca de 15 milhões de
+          visitas por ano.
+        <p class="card__description">
+          O Parque do Ibirapuera, uma das principais atrações de São Paulo, abriga dezenas de atividades que você pode
+          curtir todos os dias da semana. Qual horário e preço dos ingressos nos museus? Há estacionamento? Como faço
+          para chegar? Onde comer? Descubra aqui cada uma das atrações do Parque do Ibirapuera.
+          No meio da selva de pedra, o Parque do Ibirapuera – Ibira para os mais íntimos – reluz como uma grande área
+          verde. Para muitos é o pulmão da capital paulista. Inaugurado em agosto de 1954, durante as comemorações dos
+          400 anos de São Paulo, o espaço abriga museus, planetário, restaurantes e muita área para prática esportiva.
+          Chega a receber 150.000 visitantes por final de semana, cerca de 15 milhões de visitas por ano.
+          São 158 hectares de área, ou melhor 1.584.000 m², destinados ao lazer dos paulistanos e turistas. Além da
+          grande área usada para praticar esporte, você encontra nas dependências do Parque: o Pavilhão Japonês, Museu
+          de Arte Moderna, Museu Afro Brasil, Auditório Ibirapuera, e muito mais. Destaque para arquitetura de Oscar
+          Niemeyer.
+          Muitas famílias também aproveitam o espaço para fazer piquenique e até aniversários nos gramados em meio às
+          árvores. O que também não falta são noivos tirando fotos, casais apaixonados e grávidas aproveitando a bela
+          paisagem para registrar profissionalmente estes momentos únicos
+          O Parque do Ibirapuera é um ótimo refúgio para quem busca muito contato com a natureza e um “ar puro” em meio
+          ao caos paulistano. Na flora, exemplares de árvores como jabuticabeira, jaqueira e pau-brasil. O parque todo
+          abriga mais de 530 espécies de plantas, 350 espécies de fauna, sendo 45 espécies de borboletas, 12 espécies de
+          peixes, 14 de répteis e anfíbios, 17 espécies de mamíferos e 229 espécies de aves. Para relaxar basta escolher
+          a sombra mais fresca e aproveitar, ou você pode meditar, fazer ioga, pilates, artes márcias, etc. O Parque é
+          democrático e aceita todas as modalidades…</p>
+      </div>
+    </div><br><br>
 
-  </body>
+  </center>
+
+  <center>
+  <h3>Deixe seu Comentário</h3>
+</center>
+
+    <label class="label_name" for="name">Nome:</label><br>
+    <input type="text" placeholder="Digite seu Nome:" id="name"><br><br>
+
+    <label class="label_email" for="email">Email:</label><br>
+    <input type="email" placeholder="Digite seu Email" id="email"><br><br>
+
+    <label class="label_senha" for="password">Senha:</label><br>
+    <input type="password" placeholder="Digite sua Senha" id="senha"><br><br>
+
+  <h4>Você já Andou de Avião?</h4>
+
+  <label for="sim">Sim</label>
+  <input type="radio" id="sim" name="questionario" value="sim"><br>
+
+  <label for="nao">Não</label>
+  <input type="radio" id="nao" name="questionario" value="nao"><br><br>
+
+  <button type="button">Enviar</button>
+</body>
+
 </html>
